crates/plotnik-tests/tests/03-analyze/definitions/error_comment_only_defines_nothing.txt
// no definitions
------------------ DIAGNOSTICS -------------------
error: query defines nothing
 --> query.ptk:1:1
  |
1 | // no definitions
  | ^^^^^^^^^^^^^^^^^
  |
help: add a definition, e.g. `Q = (identifier) @id`
------------------ DEFINITIONS -------------------
